<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_creator="@android:integer/status_bar_notification_info_maxnum"
        android:background="@color/colorToolbar"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/titleTimesLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/titleOfInputTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleOfInputTime"
            android:textSize="@dimen/textSizeToTitleInputSpaceAndResult"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputTime1ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="@string/inputTime1"
        android:textSize="@dimen/textSizeToInputSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTimesLL" />

    <EditText
        android:id="@+id/inputTime2ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="@string/inputTime2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTime1ET" />

    <LinearLayout
        android:id="@+id/operationLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTime2ET"
        app:layout_constraintVertical_bias="0.05">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/buttonSum"
            android:textSize="@dimen/textSizeToButton" />

        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/buttonDif"
            android:textSize="@dimen/textSizeToButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>